--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>About</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&display=swap" rel="stylesheet">
     </head>
         <header>
         <h1>About me!</h1>
