--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
  <html>
         <head>
+          <link href="style.css" rel="stylesheet" type="text/css">
+          <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&display=swap" rel="stylesheet">
           <title> Eerste Site! </title>
         </head>
         <header>
